--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <h6><i class="bi bi-book-half"></i> Engenharia de Computação (2018-2022)</h6>
                         <h6><i class="bi bi-briefcase-fill mr-2"></i> Java Developer</h6>
                         <h6><i class="bi bi-envelope-fill mr-2"></i> joaovmsg@gmail.com</h6>
-                        <h6><i class="bi bi-telephone-fill mr-2"></i> +55 12 98226-5697 <a href="https://wa.me/5512982265697"><i class="bi bi-whatsapp"></i></a></h6>
+                        <h6><i class="bi bi-telephone-fill mr-2"></i> +55 12 98226-5697 <a href="https://wa.me/5512982265697" target="_blank"><i class="bi bi-whatsapp"></i></a></h6>
                         <h6><i class="bi bi-linkedin mr-2"></i> www.linkedin.com/in/jvmsg</h6>
                         <h6><i class="bi bi-github mr-2"></i> github.com/jvmsg</h6>
                         
