Adição de formação acadêmica

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       }
       .card {
-        padding: 0.5em 1.5em 1.5em;
+        padding: 0.5em 1.5em 1.5em 0.5em;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
       }
       .skill {
@@ -177,12 +177,11 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 col-12 my-2">
-          <div class="card">
+        <div class="col-lg-8 col-12">
+          <div class="card my-2">
             <div class="card-body">
               <h2>
-                <i class="bi bi-briefcase-fill mr-3"></i> Experiência
-                Proficional
+                <i class="bi bi-briefcase-fill"></i> Experiência Proficional
               </h2>
 
               <hr />
@@ -197,8 +196,29 @@
               <hr />
 
               <h5>Estagiário em ciência dos Dados | DDMX</h5>
-              <i class="bi bi-calendar2-fill"> Dez/2020 - Dez/2021</i>
+              <i class="bi bi-calendar2-check-fill"> Dez/2020 - Dez/2021</i>
               <p>Descrição do cargo</p>
+            </div>
+          </div>
+
+          <div class="card my-2">
+            <div class="card-body">
+              <h2><i class="bi bi-book-half"></i> Formação Acadêmica</h2>
+
+              <hr />
+
+              <h5>Graduação em Engenharia de Computação | UNIFEI</h5>
+              <i class="bi bi-calendar2-check-fill"> 2018 - 2022 </i>
+
+              <hr />
+
+              <h5>Ensino Médio | IDESA</h5>
+              <i class="bi bi-calendar2-check-fill"> 2015 - 2017</i>
+
+              <hr />
+
+              <h5>Ensino Fundamental | IDESA</h5>
+              <i class="bi bi-calendar2-check-fill"> 2003 - 2014</i>
             </div>
           </div>
         </div>
