--- a/index.html
+++ b/index.html
@@ -126,9 +126,19 @@
                 ></a>
               </h6>
               <h6>
-                <i class="bi bi-linkedin mr-2"></i> www.linkedin.com/in/jvmsg
+                <i class="bi bi-linkedin mr-2"></i>
+                www.linkedin.com/in/jvmsg
+                <a href="https://www.linkedin.com/in/jvmsg" target="_blank">
+                  <i class="bi bi-box-arrow-up-right"></i>
+                </a>
               </h6>
-              <h6><i class="bi bi-github mr-2"></i> github.com/jvmsg</h6>
+              <h6>
+                <i class="bi bi-github mr-2"></i>
+                github.com/jvmsg
+                <a href="https://github.com/jvmsg" target="_blank">
+                  <i class="bi bi-box-arrow-up-right"></i>
+                </a>
+              </h6>
 
               <hr />
 
