Correção da HorizontalLine do nome

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
       .nome {
         padding-inline: 20px;
-        padding-block: 5px;
+        padding-top: 20px;
       }
       .card {
         padding: 0.5em 1.5em 1.5em 0.5em;
@@ -77,7 +77,7 @@
         background-color: var(--skill-bar-color);
         border-radius: 0.375rem;
       }
-      ul{
+      ul {
         padding-block: 5px;
       }
       @media only screen and (max-width: 991px) {
@@ -114,12 +114,11 @@
           <div class="card">
             <img class="mx-20 my-2" src="images/perfil.jpg" width="100%" />
             <div class="nome">
-                <h3>João Víctor de Moraes Santos Gomes</h3>
+              <h3>João Víctor de Moraes Santos Gomes</h3>
             </div>
 
-            <hr />
-
             <div class="card-body">
+              <hr />
               <h6>
                 <i class="bi bi-book-half"></i> Engenharia de Computação
                 (2018-2022)
@@ -220,12 +219,14 @@
                 </li>
                 <li>
                   <p>
-                    Responsável pela análise de dados, principalmente utilizando Elasticsearch para aquisição de dados em tempo real;
+                    Responsável pela análise de dados, principalmente utilizando
+                    Elasticsearch para aquisição de dados em tempo real;
                   </p>
                 </li>
                 <li>
                   <p>
-                    Desenvolvimento de APIs REST utilizando Java e MongoDB como banco de dados para aplicações mobile.
+                    Desenvolvimento de APIs REST utilizando Java e MongoDB como
+                    banco de dados para aplicações mobile.
                   </p>
                 </li>
               </ul>
