--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="card my-2">
             <div class="card-body">
               <h2>
-                <i class="bi bi-briefcase-fill"></i> Experiência Proficional
+                <i class="bi bi-briefcase-fill"></i> Experiência Profissional
               </h2>
 
               <hr />
